<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">GithubAppConsumer</string>
    <string name="hello_blank_fragment">Halo Fragment Kosong</string>
    <string name="follow">Mengikuti</string>
    <string name="follower">Pengikut</string>
    <string name="repo">Repositori</string>
    <string name="Location">Lokasi</string>
    <string name="company">Perusahaan</string>
    <string name="name">Suhaili Faruq</string>
    <string name="username">Nama Pengguna</string>
    <string name="hint">Mencari Nama Pengguna</string>
    <string name="detail">Detail</string>
    <string name="about">Tentang Saya</string>
    <string name="languange">Ubah Bahasa</string>
    <string name="setting">Pengaturan</string>
    <string name="dev">Suhaili Faruq</string>
    <string name="email">suhaili.faruq01@gmail.com</string>
    <string name="motto">Saya Ingin Membuat Kesalahpahaman menjadi kenyataan-NamDooSan</string>
    <string name="tagname">Nama</string>
    <string name="tageamail">Email</string>
    <string name="tagMotto">Motto</string>
    <string name="peringatan">Tidak Di Temukan</string>
    <string name="favorite">Pengguna Favorit</string>
    <string name="settings">Pengaturan</string>
    <string name="reminderTime">Notifikasi Pengingat setiap 09.00 WIB</string>
    <string name="notiftitle">Pengingat GitHubApp</string>
    <string name="notifmessage">Cek Lagi Yuk,Ada Pengguna Github baru Nih !</string>
    <string name="statOn">Aktif</string>
    <string name="statOff">Mati</string>
</resources>