<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:iconSpaceReserved="false">

    <SwitchPreferenceCompat
        android:key="reminder"
        android:title="@string/reminderTime"
        android:singleLine="true"
        app:iconSpaceReserved="false"
        android:summaryOn="@string/statOn"
        android:summaryOff="@string/statOff"/>
    <Preference
        android:key="languange"
        android:title="@string/languange"
        android:icon="@drawable/ic_baseline_language_24"
        app:iconSpaceReserved="false"/>


    <Preference
        android:key="about"
        android:title="@string/about"
        android:icon="@drawable/ic_baseline_info_24"
        app:iconSpaceReserved="false">
    </Preference>




</PreferenceScreen>